[tool.poetry]
name = "bloo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
"discord.py" = "^2.1.0"
asyncpg = "^0.28.0"
aiolimiter = "1.1.0"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
