[tool.poetry]
name = "bloo"
version = "1.5.0"
description = ""
authors = ["Aav <aav.verinhall@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
"discord.py" = "^2.1.0"
asyncpg = "^0.30.0"
aiolimiter = "1.2.1"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
